--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ANALYZE OF APP STORES INTEREST"
+    "# ANALYSIS OF APP STORES INTEREST"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, I have two data sets, which are obtained from Apple Store and Google Play Store. My aim is understanding the interest of users on an application. This analyze will be useful to determine our road map for next application projects. I will focus on the free apps which are English named. Basicly, I will obtain the number of users according to categories."
+    "In this project, I have two data sets, which are obtained from Apple Store and Google Play Store. My aim is to understand the interest of users on an application. This analysis will be useful to determine our road map for the next application project. I will focus on the free apps which have English names. Basically, I will obtain the number of users according to categories."
    ]
   },
   {
@@ -165,14 +165,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have 7197 IOS apps in Apple Store data set, and there are 16 columns on this data set. If you want to learn more details about data set, it can be found in the data set [documentation](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps)"
+    "I have 7197 IOS apps in the Apple Store data set, and there are 16 columns on this data set. If you want to learn more details about this data set, it can be found in the data set: [documentation](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, I have 10841 apps in Google Play data set and 13 columns on this data set. To obtain details about each column, you can use [this link](https://www.kaggle.com/lava18/google-play-store-apps)."
+    "Also, I have 10841 apps in the Google Play data set and 13 columns on this data set. To obtain details about each column, you can use [this link](https://www.kaggle.com/lava18/google-play-store-apps)."
    ]
   },
   {
@@ -193,14 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before deep into analyzing data sets, I have to be sure that my data is clean. [In duscussion page](https://www.kaggle.com/lava18/google-play-store-apps/discussion) about Google Play Store data set, I see an error on [one of the discussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion/66015). Let's look at this wrong data, and clean it."
+    "Before analyzing data sets deeply, I have to be sure that my data is clean. [In discussion page](https://www.kaggle.com/lava18/google-play-store-apps/discussion) about Google Play Store data set, I see an error on [one of the discussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion/66015). Let's look at this wrong data, and clean it."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The entry of 10472 has missing rating value and the other entries are displaced. I will delete this entry."
+    "The entry of 10472 has a missing rating value and the other entries are displaced. I will delete this entry."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, I have 10840 apps to analyze in Google App Store data set. However, we can see that there are some duplicate entries in the data sets which can effect to our analyze wrongly. You can see this fact from apps which name is \"Instagram\" below, as an example. I will clean these extra entries."
+    "Now, I have 10840 apps to analyze in the Google App Store data set. However, we can see that there are some duplicate entries in the data sets which can wrongly affect our analysis. You can see this fact from the app which is named \"Instagram\" below, as an example. I will clean these extra entries."
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have 2 duplicate entries in Apple Store data set and 1181 duplicate entries in Google Play Store. Let's clean them."
+    "I have 2 duplicate entries in the Apple Store data set and 1181 duplicate entries in the Google Play Store. Let's clean them."
    ]
   },
   {
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, I have to decide how I can select the true entry from these duplicate entries. Actually, I can select the entry which has more reviews. Because, the high review can show the last situation on the app data."
+    "Now, I have to decide how I can select the true entry from these duplicate entries. Actually, I can select the entry which has more reviews, because the high review can show the last situation on the app data."
    ]
   },
   {
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "#Show the amount of the maximum reviews for duplicate apps in Google Play data set \n",
+    "#Show the amount of the maximum reviews for duplicate apps in the Google Play data set \n",
     "reviews_max={}\n",
     "for app in android:\n",
     "    name= app[0]\n",
@@ -468,7 +468,7 @@
     }
    ],
    "source": [
-    "#Show the amount of the maximum rewievs for duplicate apps in Apple Store data set\n",
+    "#Show the amount of the maximum reviews for duplicate apps in the Apple Store data set\n",
     "user_max={}\n",
     "for app in ios:\n",
     "    name= app[1]\n",
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When I evaluate the results, I see that selecting the maximum reviewed entries is compatible with the data I expect. I can use this method to get rid of repeated apps."
+    "When I evaluate the results, I see that selecting the maximum reviewed entry is compatible with the data I expect. I can use this method to get rid of repeated apps."
    ]
   },
   {
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "#Google Play data set without duplicate apps\n",
+    "#The Google Play data set without duplicate apps\n",
     "android_clean=[]\n",
     "already_added=[]\n",
     "\n",
@@ -532,7 +532,7 @@
     }
    ],
    "source": [
-    "#App Store data set without duplicate apps\n",
+    "#The Apple Store data set without duplicate apps\n",
     "ios_clean=[]\n",
     "already_addedd=[]\n",
     "\n",
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My plan is to make decision on apps while using English named apps. However, there are non-English named apps. I should get rid of this apps to analyze to reach my goal. You can find some example of non-English named apps below: "
+    "My plan is to make a decision on apps while using English named apps. However, there are non-English named apps. I should get rid of these apps to analyze and reach my goal. You can find some examples of non-English named apps below: "
    ]
   },
   {
@@ -596,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For English alphabet, they have ASCII values which are from 0 to 127. So, we can use this information to detect apps in English. I will create a function to find English alphabet's characters."
+    "For the English alphabet, they have ASCII values which are from 0 to 127. So, we can use this information to detect English named apps. I will create a function to find English alphabet's characters."
    ]
   },
   {
@@ -721,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I created a function. Right now, I have a problem. I never accept the special characters in first function. However, there are some apps in English, although they have special character, as above. So, we should put in mind these characters to hinder data loss. I should develop the function according to these special characters."
+    "I created a function. Right now, I have a problem. I never accepted the special characters in the first function. However, there are some apps in English, although they have special characters, as above. So, we should keep these characters in mind to hinder data loss. I should develop the function according to these special characters."
    ]
   },
   {
@@ -808,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No longer, I can use the function on my data sets to get English named apps. It is not a perfect selection, but useful for proper analyze. "
+    "I can no longer use the function on my data sets to get English named apps. It is not a perfect selection, but useful for proper analysis. "
    ]
   },
   {
@@ -912,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My plan is in this project analyze the free apps to use in my next projects. So, I need to seperate the free apps from the core data sets. I will obtain the last data set to analyze. "
+    "My plan in this project to analyze the free apps to use in my next projects. So, I need to seperate the free apps from the core data sets. I will obtain the last data set to analyze. "
    ]
   },
   {
@@ -932,7 +932,7 @@
     }
    ],
    "source": [
-    "#Find the free apps from Google Play Store data set\n",
+    "#Find the free apps from the Google Play Store data set\n",
     "android_final= []\n",
     "ios_final = []\n",
     "\n",
@@ -962,14 +962,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have my final data sets, right now. With these data sets, I can understand the interest of users. My final goal is to find proper app profile which is succesful in two platforms. "
+    "I have my final data sets, right now. With these data sets, I can understand the interest of users. My final goal is to find a proper app profile which is succesful in two platforms. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After this part, I can start with calculating the frequencies different types of the apps."
+    "After this part, I can start with calculating the frequencies on different types of apps."
    ]
   },
   {
@@ -1100,7 +1100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to talk about App Store apps, I see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. The third one is 'Photo& Video',that is 4.9%. Also, there are more application that they has close frequencies to each other.  "
+    "If we want to talk about App Store apps, I see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. The third one is 'Photo& Video',that is 4.9%. Also, there are more apps that have close frequencies to each other.  "
    ]
   },
   {
@@ -1232,7 +1232,7 @@
     }
    ],
    "source": [
-    "display_table(android_final,-4) #Google Play Store Frequencies of Genres"
+    "display_table(android_final,-4) #The Google Play Store Frequencies of Genres"
    ]
   },
   {
@@ -1281,14 +1281,14 @@
     }
    ],
    "source": [
-    "display_table(android_final,1)# Google Play Store Frequencies of Categories"
+    "display_table(android_final,1)#The Google Play Store Frequencies of Categories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is interesting results in Google Play, I can not see the apps at the top of the apps which is made for 'game' or 'entertainment'. But these catogories close to top. Trying to analyze the app profiles from Google Play store with using the genres to analyze can be complicated, because the genres are much granular. To obtain a general results I will use categories.   "
+    "There are interesting results in the Google Play, I can not see the top apps for 'game' or 'entertainment', but these catogories are close to the top. Trying to analyze the app profiles from the Google Play store while using the genres to analyze can be complicated, because the genres are much granular. To obtain general results I will use categories.   "
    ]
   },
   {
@@ -2229,7 +2229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are not too much insuperable apps in \"BOOKS_AND_REFERENCE\" category like communication apps."
+    "There are not too much insuperable apps in \"BOOKS_AND_REFERENCE\" category like communication apps. When I check the number of installs, I can say that the users have interest to install book & reference apps. "
    ]
   },
   {
@@ -2243,7 +2243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I checked the categories to understand users' interest while creating frequency tables. The \"COMMUNICATION\" category has the highest installation rates. When I check the number of installs, I can say that the users have interest to install book & reference apps. "
+    "I checked the categories to understand users' interest while creating frequency tables. The \"COMMUNICATION\" category has the highest installation rates in Google Play Store "
    ]
   }
  ],
