--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -1093,14 +1093,14 @@
     }
    ],
    "source": [
-    "display_table(ios_final,-5 ) #App Store Frequencies of Genres"
+    "display_table(ios_final,-5 ) #Apple Store Frequencies of Genres"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to talk about App Store apps, I see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. The third one is 'Photo& Video',that is 4.9%. Also, there are more apps that have close frequencies to each other.  "
+    "If we want to talk about Apple Store apps, I see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. The third one is 'Photo& Video',that is 4.9%. Also, there are more apps that have close frequencies to each other.  "
    ]
   },
   {
@@ -1288,7 +1288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are interesting results in the Google Play, I can not see the top apps for 'game' or 'entertainment', but these catogories are close to the top. Trying to analyze the app profiles from the Google Play store while using the genres to analyze can be complicated, because the genres are much granular. To obtain general results I will use categories.   "
+    "There are interesting results in the Google Play Store data set, I can not see the top apps for 'game' or 'entertainment', but these catogories are close to the top. Trying to analyze the app profiles from the Google Play store while using the genres to analyze can be complicated, because the genres are much granular. To obtain general results I will use categories.   "
    ]
   },
   {
@@ -2243,7 +2243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I checked the categories to understand users' interest while creating frequency tables. The \"COMMUNICATION\" category has the highest installation rates in Google Play Store "
+    "I created a frequency table for the Apple Store data set while using number of reviews according to genres. The \"Navigation\" genre has highest number of reviews. The second genre with highest number of reviews is \"Reference\" in the Apple Store data set. I created a frequency table with number of installs for the Google Play Store data set. I calculated frequencies according to categories on the data set. The \"COMMUNICATION\" category has the highest number of installs. The \"BOOKS_AND_REFERENCE\" is the second category which has highest number of installs. According to these results, I can recommend to create an app which is related with books and references. These fields have high success on two of the apps' platforms. It means a new app project on these fields has high chance to be successful."
    ]
   }
  ],
