--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -1841,13 +1841,7 @@
       "Lite for Facebook Messenger : 1,000,000+\n",
       "FC Browser - Focus Privacy Browser : 1,000+\n",
       "EHiN-FH conferenceapp : 100+\n",
-      "Carpooling FH Hagenberg : 100+\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Carpooling FH Hagenberg : 100+\n",
       "Wi-Fi Auto-connect : 1,000,000+\n",
       "Talkie - Wi-Fi Calling, Chats, File Sharing : 500,000+\n",
       "WeFi - Free Fast WiFi Connect & Find Wi-Fi Map : 1,000,000+\n",
@@ -2243,7 +2237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I created a frequency table for the Apple Store data set while using number of reviews according to genres. The \"Navigation\" genre has highest number of reviews. The second genre with highest number of reviews is \"Reference\" in the Apple Store data set. I created a frequency table with number of installs for the Google Play Store data set. I calculated frequencies according to categories on the data set. The \"COMMUNICATION\" category has the highest number of installs. The \"BOOKS_AND_REFERENCE\" is the second category which has highest number of installs. According to these results, I can recommend to create an app which is related with books and references. These fields have high success on two of the apps' platforms. It means a new app project on these fields has high chance to be successful."
+    "I created a frequency table for the Apple Store data set while using number of reviews according to genres. The \"Navigation\" genre has highest number of reviews. The second genre with highest number of reviews is \"Reference\" in the Apple Store data set. I created a frequency table with number of installs for the Google Play Store data set. I calculated frequencies according to categories on the data set. The \"COMMUNICATION\" category has the highest number of installs. The \"BOOKS_AND_REFERENCE\" is the second category which has highest number of installs. According to these results, I can recommend to create an app which is related with books and references. Users are interested to use books and references apps and these fields have high success on two of the apps' platforms. It means a new app project on these fields has high chance to be successful."
    ]
   }
  ],
