--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "from csv import reader\n",
-    "opened_file1= open(\"C:\\\\Users\\\\shyl\\\\Desktop\\\\projects\\\\dataquest projects\\\\Interest of App Stores Users\\\\googleplaystore.csv\", encoding=\"utf8\")\n",
-    "opened_file2= open(\"C:\\\\Users\\\\shyl\\\\Desktop\\\\projects\\\\dataquest projects\\\\Interest of App Stores Users\\\\AppleStore.csv\", encoding=\"utf8\")\n",
+    "opened_file1= open(\"googleplaystore.csv\", encoding=\"utf8\")\n",
+    "opened_file2= open(\"AppleStore.csv\", encoding=\"utf8\")\n",
     "read_file1= reader(opened_file1)\n",
     "read_file2= reader(opened_file2)"
    ]
@@ -1288,7 +1288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are interesting results in the Google Play Store data set, I can not see the top apps for 'game' or 'entertainment', but these catogories are close to the top. Trying to analyze the app profiles from the Google Play store while using the genres to analyze can be complicated, because the genres are much granular. To obtain general results I will use categories.   "
+    "There are interesting results in the Google Play Store data set, I can not see the top apps for 'game' or 'entertainment', but these catogories are close to the top. Trying to analyze the app profiles from the Google Play store while using the genres to analyze can be complicated, because the genres are more granular. To obtain general results, I will use categories.   "
    ]
   },
   {
@@ -1302,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, I am close to my aim. I can find the most popular apps to understand interest of users. I will use frequency table again, it will show the target genre and I will see most popular apps in Apple Store data set. "
+    "Now, I am close to my aim. I can find the most popular apps to understand the interest of users. I will use a frequency table again. It will show the target genre, and I will see most popular apps in the Apple Store data set. "
    ]
   },
   {
@@ -1343,7 +1343,7 @@
    "source": [
     "ios_genre= freq_table(ios_final,11)\n",
     "\n",
-    "#To calculate average number of user ratings per app genre on App Store\n",
+    "#To calculate average number of user ratings per app genre on the Apple Store\n",
     "for genre in ios_genre:\n",
     "    total=0\n",
     "    len_genre= 0\n",
@@ -1429,7 +1429,7 @@
     }
    ],
    "source": [
-    "#To show the number of rating on 'Reference' genre\n",
+    "#To show the number of ratings on 'Reference' genre\n",
     "for app in ios_final:\n",
     "    if app[-5]=='Reference':\n",
     "        print(app[1], \":\", app[5])"
@@ -1453,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have number of installs to use in \"Installs\" column. However, this data is not precise to calculate."
+    "I have number of installs in \"Installs\" column; however, this data is not precise to calculate."
    ]
   },
   {
@@ -1841,7 +1841,13 @@
       "Lite for Facebook Messenger : 1,000,000+\n",
       "FC Browser - Focus Privacy Browser : 1,000+\n",
       "EHiN-FH conferenceapp : 100+\n",
-      "Carpooling FH Hagenberg : 100+\n",
+      "Carpooling FH Hagenberg : 100+\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Wi-Fi Auto-connect : 1,000,000+\n",
       "Talkie - Wi-Fi Calling, Chats, File Sharing : 500,000+\n",
       "WeFi - Free Fast WiFi Connect & Find Wi-Fi Map : 1,000,000+\n",
@@ -1881,7 +1887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a lot of application under the communication category. I will select the most popular ones. "
+    "There are a lot of applications under the communication category. I will select the most popular ones. "
    ]
   },
   {
@@ -1937,7 +1943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If I ignore the communication apps which have installs over 100 million, the average will reduce roughly ten times. I should ignore them. Because these apps are extraordinary and distract me from consistent result."
+    "If I ignore the communication apps which have installs over 100 million, the average will reduce roughly ten times. I should ignore them because these apps are extraordinary and distract me from consistent results."
    ]
   },
   {
@@ -1975,7 +1981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This average is more proper for me, because it is to difficult to compete with popular communication apps for a new application project. The second category is 'BOOKS_AND_REFERENCE' which has high number of installs."
+    "This average is more proper for me because it is to difficult to compete with popular communication apps for a new application project. The second category is 'BOOKS_AND_REFERENCE' which has higher numbers of installs."
    ]
   },
   {
@@ -2223,7 +2229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are not too much insuperable apps in \"BOOKS_AND_REFERENCE\" category like communication apps. When I check the number of installs, I can say that the users have interest to install book & reference apps. "
+    "There are not too many insuperable apps in the \"BOOKS_AND_REFERENCE\" category such as in the communication category. When I check the number of installs, I can say that the users are more interested in installing book and reference apps than other categories. However, the communication category remains the most installed. "
    ]
   },
   {
@@ -2237,7 +2243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I created a frequency table for the Apple Store data set while using number of reviews according to genres. The \"Navigation\" genre has highest number of reviews. The second genre with highest number of reviews is \"Reference\" in the Apple Store data set. I created a frequency table with number of installs for the Google Play Store data set. I calculated frequencies according to categories on the data set. The \"COMMUNICATION\" category has the highest number of installs. The \"BOOKS_AND_REFERENCE\" is the second category which has highest number of installs. According to these results, I can recommend to create an app which is related with books and references. Users are interested to use books and references apps and these fields have high success on two of the apps' platforms. It means a new app project on these fields has high chance to be successful."
+    "I created a frequency table for the Apple Store data set while using number of reviews, according to genres. The \"Navigation\" genre has the highest number of reviews. The second genre with the highest number of reviews is \"Reference\" in the Apple Store data set. I created a frequency table with number of installs for the Google Play Store data set. I calculated frequencies according to categories on the data set. The \"COMMUNICATION\" category has the highest number of installs. The \"BOOKS_AND_REFERENCE\" category has the second highest number of installs. According to these results, I can recommend to create an app which is related to books and references. Users are interested to use books and references apps and these fields have high success on two of the apps' platforms. It means a new app project in these fields has a high chance to be successful."
    ]
   }
  ],
